# py_open_schema

./: .gitignore  README.md  justfile  probe-swagger.py  pyproject.toml
examples/: flask-app.py  probe-swagger.py
open_schema/: __init__.py  decorator.py  mapper.py  models.py  registry.py
open_schema/backends/: controller.py  flask.py  pytest.py  swagger.py
tests/: conftest.py  test_mapper.py  test_registry.py
